updated all sections, ramaining is to update all the copy and creatives

--- a/src/sections/L1sec8-mainCTA.html
+++ b/src/sections/L1sec8-mainCTA.html
@@ -11,29 +11,29 @@
             <div class="self-stretch flex-col justify-start items-start gap-4 flex lg:flex-row lg:gap-10">
                 <div class="self-stretch flex-col justify-start items-start gap-4 flex lg:basis-1/2">
                     <div class="rounded-2xl justify-center items-center inline-flex overflow-hidden w-full">
-                        <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                        <img class="origin-top-left w-full" src="/src/assets/images/[4x3]-beBG-wTv2-site@1.5x.png" />
                     </div>
                     <div class="flex-col justify-start items-start gap-4 flex-wrap hidden lg:grid lg:grid-cols-2">
                         <div class="rounded-2xl justify-center items-center overflow-hidden inline-flex">
-                            <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                            <img class="origin-top-left" src="/src/assets/images/products/[6x5]-product-1.png" />
                         </div>
                         <div class="rounded-2xl justify-center items-center overflow-hidden inline-flex">
-                            <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                            <img class="origin-top-left" src="/src/assets/images/products/[6x5]-product-2.png" />
                         </div>
                         <div class="rounded-2xl justify-center items-center overflow-hidden inline-flex">
-                            <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                            <img class="origin-top-left" src="/src/assets/images/products/[6x5]-product-3.png" />
                         </div>
                         <div class="rounded-2xl justify-center items-center overflow-hidden inline-flex">
-                            <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                            <img class="origin-top-left" src="/src/assets/images/products/[6x5]-product-4.png" />
                         </div>
                         <div class="rounded-2xl justify-center items-center overflow-hidden inline-flex">
-                            <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                            <img class="origin-top-left" src="/src/assets/images/products/[6x5]-product-5.png" />
                         </div>
                         <div class="rounded-2xl justify-center items-center overflow-hidden inline-flex">
-                            <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                            <img class="origin-top-left" src="/src/assets/images/products/[6x5]-product-6.png" />
                         </div>
                         <div class="rounded-2xl justify-center items-center overflow-hidden inline-flex">
-                            <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                            <img class="origin-top-left" src="/src/assets/images/products/[6x5]-product-7.png" />
                         </div>
                     </div>
                 </div>
@@ -49,7 +49,6 @@
                             <div class="self-stretch text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">Un sistem complet care îți oferă documente profesionale, ghiduri esențiale și strategii testate, astfel încât să începi rapid și fără stres.</div>
                         </div>
                         <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 flex">
-                            
                             <div class="self-stretch flex-col justify-start items-center flex">
                                 <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
                                     <a href="https://sipunct.com/" class="py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
@@ -143,7 +142,7 @@
                         </div>
                         <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 flex">
                             <div class="self-stretch flex-col justify-center items-start gap-1 flex">
-                                <div class="self-stretch text-center text-grays-1000 text-lg font-normal ">Total: 245€</div>
+                                <div class="self-stretch text-center text-grays-800 text-lg font-normal line-through">Total: 245€</div>
                                 <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">45€</span></div>
                             </div>
                             <div class="self-stretch flex-col justify-start items-center flex">
@@ -160,22 +159,55 @@
         <div class="self-stretch flex-col justify-start items-start gap-8 flex">
             <div class="self-stretch flex-col justify-start items-start gap-6 flex">
                 <div class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif">Plus...</div>
-                <div class="px-4 pt-6 pb-4 bg-gradient-to-b from-[#fffcfc] to-[#ffecec] rounded-2xl border-4 border-[#ff3636] flex-col justify-start items-start gap-6 flex overflow-hidden">
-                    <div class="self-stretch flex-col justify-start items-start gap-3 flex">
-                        <div class="self-stretch flex-col justify-start items-start gap-1 flex">
-                            <div class="self-stretch text-center text-red-650 text-base font-medium ">BONUS #1</div>
-                            <div class="self-stretch text-center text-grays-1000 text-2xl font-medium ">Documente personalizate adaptate brandului tău</div>
-                            <div class="self-stretch text-center"><span class="text-[#7e8897] text-base font-medium ">Valoare: </span><span class="text-[#7e8897] text-base font-medium  line-through">500€</span><span class="text-[#7e8897] text-base font-medium "> - </span><span class="text-red-650 text-lg font-semibold italic">GRATIS*</span></div>
-                        </div>
-                        <div class="self-stretch text-center text-grays-1000 text-xl font-normal ">Te ajutăm să începi cu un avantaj clar! Primești documentele esențiale din Toolkit, personalizate după brandul tău.</div>
-                    </div>
-                    <div class="rounded-2xl justify-center items-center inline-flex overflow-hidden">
-                        <img class="origin-top-left" src="/src/assets/images/placeholder-img5-368x190.png" />
-                    </div>
-                    <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 flex overflow-hidden">
+                <div class="px-4 pt-6 pb-4 bg-gradient-to-b from-[#fffcfc] to-[#ffecec] rounded-2xl border-4 border-[#ff3636] flex-col justify-start items-start gap-6 flex overflow-hidden lg:flex-row lg:px-10 lg:pt-10 lg:pb-10 lg:items-center md:max-lg:justify-center lg:gap-10">
+                    <div class="flex-col justify-start items-start gap-6 flex overflow-hidden lg:basis-1/2 md:max-lg:justify-center md:max-lg:items-center">
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex">
                             <div class="self-stretch flex-col justify-start items-start gap-1 flex">
-                                <div class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">*Ofertă limitată:</div>
+                                <div class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">BONUS #1</div>
+                                <h3 class="self-stretch text-center text-grays-1000 text-2xl font-medium lg:text-3xl md:max-lg:text-3xl ">Documente personalizate adaptate brandului tău</h3>
+                            </div>
+                            <div class="self-stretch text-center text-grays-1000 text-xl font-normal ">Te ajutăm să începi cu un avantaj clar! Primești documentele esențiale din Toolkit, personalizate după brandul tău.</div>
+                        </div>
+                        <h4 class="self-stretch text-center text-red-650 text-2xl font-medium font-serif lg:hidden">Câteva exemple...</h4>
+                        <div class="rounded-2xl justify-center items-center inline-flex overflow-hidden lg:hidden">
+                            <lottie-player class="origin-top-left w-full h-auto" src="https://cdn.lottielab.com/l/7pSBq27oeaVBMS.json" loop autoplay></lottie-player>
+                        </div>
+                        <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 lg:flex overflow-hidden hidden lg:gap-2">
+                            <div class="self-stretch flex-col justify-start items-start gap-3 flex">
+                                <div class="self-stretch flex-col justify-start items-start gap-1 flex">
+                                    <h4 class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">Ofertă limitată:</h4>
+                                </div>
+                            </div>
+                            <div class="self-stretch justify-start items-center gap-4 inline-flex">
+                                <div class="grow shrink basis-0 text-grays-1000 text-base font-normal ">Din cauza numărului mare de persoane care procură acest kit, acest bonus este valabil GRATIS pentru o perioadă limitată de timp: </div>
+                            </div>
+                            <div class="timer-container self-stretch p-2 pb-3 bg-grays-75 rounded-lg border-2 border-[#ff0000] justify-center items-center flex flex-col">
+                                <div class="inline-flex items-center gap-2.5">
+                                    <div class="text-[#ff0000] text-sm">zile</div>
+                                    <div class="text-[#ff0000] text-sm">ore</div>
+                                    <div class="text-[#ff0000] text-sm">min</div>
+                                    <div class="text-[#ff0000] text-sm">sec</div>
+                                </div>
+                                <div class="inline-flex items-center gap-2">
+                                    <div class="days text-[#ff0000] text-3xl font-medium font-serif w-6 text-center">0</div>
+                                    <div class="hours text-[#ff0000] text-3xl font-medium font-serif w-6 text-center">0</div>
+                                    <div class="minutes text-[#ff0000] text-3xl font-medium font-serif w-6 text-center">0</div>
+                                    <div class="seconds text-[#ff0000] text-3xl font-medium font-serif w-6 text-center">0</div>
+                                </div>
+                            </div>
+                            <p class="self-stretch text-grays-1000 text-sm font-normal lg:hidden">Nu îți face griji, chiar dacă nu reușești să prinzi acestă ofertă gratis, când procuri acest kit, poți opta pentru design propriu contra cost, sau dacă ne place proiectul tău, îți oferim un design personalizat gratis!</p>
+                            <div class="self-stretch flex-col justify-start items-center flex">
+                                <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                                    <a href="https://sipunct.com/" class="py-2 px-[10%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                                </div>
+                                <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 flex overflow-hidden lg:hidden">
+                        <div class="self-stretch flex-col justify-start items-start gap-3 flex">
+                            <div class="self-stretch flex-col justify-start items-start gap-1 flex">
+                                <h4 class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">Ofertă limitată:</h4>
                             </div>
                         </div>
                         <div class="self-stretch justify-start items-center gap-4 inline-flex">
@@ -195,7 +227,7 @@
                                 <div class="seconds text-[#ff0000] text-3xl font-medium font-serif w-6 text-center">0</div>
                             </div>
                         </div>
-                        <div class="self-stretch text-grays-1000 text-sm font-normal ">Nu îți face griji, chiar dacă nu reușești să prinzi acestă ofertă gratis, când procuri acest kit, poți opta pentru design propriu contra cost, sau dacă ne place proiectul tău, îți oferim un design personalizat gratis!</div>
+                        <p class="self-stretch text-grays-1000 text-sm font-normal ">Nu îți face griji, chiar dacă nu reușești să prinzi acestă ofertă gratis, când procuri acest kit, poți opta pentru design propriu contra cost, sau dacă ne place proiectul tău, îți oferim un design personalizat gratis!</p>
                         <div class="self-stretch flex-col justify-start items-center flex">
                             <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
                                 <a href="https://sipunct.com/" class="py-2 px-[10%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
@@ -203,30 +235,33 @@
                             <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
                         </div>
                     </div>
+                    <div class="rounded-2xl justify-center items-center lg:inline-flex overflow-hidden hidden">
+                        <lottie-player class="origin-top-left w-full h-auto" src="https://cdn.lottielab.com/l/7pSBq27oeaVBMS.json" loop autoplay></lottie-player>
+                    </div>
                 </div>
             </div>
             <div class="self-stretch flex-col justify-start items-start gap-8 flex">
                 <div class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif">Și...</div>
-                <div class="px-4 pt-6 pb-4 bg-gradient-to-b from-[#f1fff4] to-[#c3f3ce] rounded-2xl border-4 border-[#10f010] flex-col justify-start items-start gap-6 flex overflow-hidden">
-                    <div class="self-stretch flex-col justify-start items-start gap-3 flex">
+                <div class="px-4 pt-6 pb-4 bg-gradient-to-b from-[#f1fff4] to-[#c3f3ce] rounded-2xl border-4 border-[#10f010] flex-col justify-start items-start gap-6 flex overflow-hidden lg:flex-row lg:px-10 lg:pt-10 lg:pb-10 lg:items-center md:max-lg:justify-center md:max-lg:items-center lg:gap-10">
+                    <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:basis-1/2 lg:justify-center">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
-                            <div class="self-stretch text-center text-red-650 text-base font-medium ">BONUS #2</div>
-                            <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-medium ">Ghidul </span><span class="text-[#460a0a] text-2xl font-medium ">„Cum să te pregătești pentru un apel de succes”</span></div>
-                            <div class="self-stretch text-center"><span class="text-[#7e8897] text-base font-medium ">Valoare: </span><span class="text-[#7e8897] text-base font-medium  line-through">30€</span><span class="text-[#7e8897] text-base font-medium "> - </span><span class="text-red-650 text-lg font-semibold italic">GRATIS</span></div>
+                            <h5 class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">BONUS #2</h5>
+                            <h3 class="self-stretch text-center lg:text-3xl md:max-lg:text-3xl "><span class="text-grays-1000 text-2xl font-medium ">Ghidul </span><span class="text-red-850 text-2xl font-medium ">„Cum să te pregătești pentru un apel de succes”</span></h3>
+                            <div class="self-stretch text-center"><span class="text-[#7e8897] text-base font-medium lg:text-xl md:max-lg:text-xl">Valoare: </span><span class="text-[#7e8897] text-base font-medium  line-through lg:text-xl md:max-lg:text-xl">30€</span><span class="text-[#7e8897] text-base font-medium "> - </span><span class="text-red-650 text-lg font-semibold italic lg:text-xl md:max-lg:text-xl">GRATIS</span></div>
                         </div>
                         <div class="self-stretch text-center text-grays-1000 text-xl font-normal ">Un apel de descoperire bine pregătit îți poate aduce clienți pe termen lung. Acest ghid îți arată exact ce trebuie să spui și cum să structurezi apelurile pentru a obține colaborări sigure și profitabile.</div>
                     </div>
-                    <div class="rounded-2xl justify-center items-center inline-flex overflow-hidden">
-                        <img class="origin-top-left" src="/src/assets/images/placeholder-img5-368x190.png" />
+                    <div class=" w-full rounded-2xl justify-center items-center inline-flex overflow-hidden lg:basis-auto lg:items-center lg:w-1/2">
+                        <img class="origin-top-left w-full " src="/src/assets/images/placeholder-img-368x368.png" />
                     </div>
                 </div>
                 <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 flex">
                     <div class="self-stretch flex-col justify-center items-start gap-1 flex">
-                        <div class="self-stretch text-center text-grays-1000 text-lg font-normal line-through">Total: 245€</div>
+                        <div class="self-stretch text-center text-grays-800 text-lg font-normal line-through">Total: 245€</div>
                         <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">45€</span></div>
                     </div>
                     <div class="self-stretch flex-col justify-start items-center flex">
-                        <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                        <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650 lg:w-1/2">
                             <a href="https://sipunct.com/" class="py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
                         </div>
                         <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
