--- a/src/sections/L1sec10-signup.html
+++ b/src/sections/L1sec10-signup.html
@@ -1,10 +1,10 @@
 <div class="px-4 justify-center items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px] xl:flex">
-    <div class="grow shrink basis-0 self-stretch py-16 flex-col justify-start items-start gap-10 inline-flex">
-        <div class="self-stretch flex-col justify-start items-start gap-4 flex">
-            <div class="self-stretch text-center text-red-650 text-base font-medium ">Pentru că ai ajuns până aici...</div>
-            <div class="self-stretch text-grays-1000] text-lg font-normal ">Cred că ești destul de interesat, dar presupun cu careva rețineri. Pentru a te convinge, îți ofer ghidul pentru un apel de succes cu clienții...</div>
-            <div class="self-stretch text-center text-grays-1000] text-2xl font-bold font-serif">Absolut gratuit!</div>
-            <div class="self-stretch text-grays-1000] text-lg font-normal ">Tot ce trebuie să faci este să introduci adresa ta de e-mail, pentru a primi ghidul pe e-mail.</div>
+    <div class="grow shrink basis-0 self-stretch py-16 flex-col justify-start items-start gap-10 inline-flex lg:flex-row-reverse">
+        <div class="self-stretch flex-col justify-start items-start gap-4 flex lg:basis-1/2 lg:justify-center">
+            <h3 class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">Pentru că ai ajuns până aici...</h3>
+            <p class="self-stretch text-grays-1000] text-lg font-normal lg:text-xl md:max-lg:text-xl">Cred că ești destul de interesat, dar presupun cu careva rețineri. Pentru a te convinge, îți ofer ghidul pentru un apel de succes cu clienții...</p>
+            <h4 class="self-stretch text-center text-grays-1000] text-2xl font-bold font-serif">Absolut gratuit!</h4>
+            <p class="self-stretch text-grays-1000] text-lg font-normal lg:text-xl md:max-lg:text-xl">Tot ce trebuie să faci este să introduci adresa ta de e-mail, pentru a primi ghidul pe e-mail.</p>
             <div class="self-stretch flex-col justify-start items-start gap-3 flex">
                 <form id="emailForm" class="self-stretch w-full">
                     <div class="self-stretch bg-grays-25 rounded-lg border border-[#b98049] justify-start">
@@ -55,8 +55,8 @@
                 </div>
             </div>
         </div>
-        <div class="self-stretch rounded-2xl justify-center items-center inline-flex overflow-hidden">
-            <img class="origin-top-left w-full" src="/src/assets/images/placeholder-img5-368x190.png" />
+        <div class="self-stretch rounded-2xl justify-center items-center inline-flex overflow-hidden lg:basis-1/2">
+            <img class="origin-top-left w-full" src="/src/assets/images/products/[6x5]-product-7.png" />
         </div>
     </div>
 </div>
