--- a/src/sections/L1sec9-guarantee.html
+++ b/src/sections/L1sec9-guarantee.html
@@ -1,40 +1,52 @@
 <div class="px-4 justify-start items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px] xl:flex">
     <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-8 inline-flex">
-        <div class="self-stretch flex-col justify-start items-start gap-8 flex">
-            <div class="self-stretch flex-col justify-start items-start gap-4 flex">
+        <div class="self-stretch flex-col justify-start items-start gap-8 flex lg:flex-row lg:gap-10">
+            <div class="self-stretch flex-col justify-start items-start gap-4 flex lg:basis-1/2">
                 <div class="self-stretch flex-col justify-start items-start gap-4 flex">
                     <div class="self-stretch flex-col justify-start items-start gap-1 flex">
-                        <div class="self-stretch text-center text-grays-1000 text-base font-medium ">Fără riscuri!</div>
-                        <div class="self-stretch text-center text-red-650 text-2xl font-bold font-serif">Garanția ta de satisfacție 100%</div>
+                        <div class="self-stretch text-center text-grays-1000 text-base font-medium lg:text-xl md:max-lg:text-xl">Fără riscuri!</div>
+                        <div class="self-stretch text-center text-red-650 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">Garanția ta de satisfacție 100%</div>
                     </div>
                     <div class="self-stretch flex-col justify-start items-start gap-4 flex">
                         <div class="self-stretch flex-col justify-start items-start gap-4 flex">
-                            <div class="self-stretch text-grays-1000 text-lg font-normal ">Știu că acest toolkit te va ajuta să începi mai rapid și mai sigur în Social Media Marketing. De aceea, îți ofer o garanție 100% fără riscuri:</div>
+                            <div class="self-stretch text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">Știu că acest toolkit te va ajuta să începi mai rapid și mai sigur în Social Media Marketing. De aceea, îți ofer o garanție 100% fără riscuri:</div>
                             <div class="self-stretch flex-col justify-start items-start gap-4 flex">
                                 <div class="self-stretch justify-start items-center gap-4 inline-flex">
                                     <div class="w-6 h-6 relative  overflow-hidden"><img src="/src/assets/images/icons/sparkling-fill.png" alt="stars icon"></div>
-                                    <div class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Dacă în 14 zile simți că acest toolkit nu este potrivit pentru tine, îți returnăm toți banii.</div>
+                                    <div class="grow shrink basis-0 text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">Dacă în 14 zile simți că acest toolkit nu este potrivit pentru tine, îți returnăm toți banii.</div>
                                 </div>
                                 <div class="self-stretch justify-start items-center gap-4 inline-flex">
                                     <div class="w-6 h-6 relative  overflow-hidden"><img src="/src/assets/images/icons/sparkling-fill.png" alt="stars icon"></div>
-                                    <div class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Fără întrebări, fără complicații, fără riscuri.</div>
+                                    <div class="grow shrink basis-0 text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">Fără întrebări, fără complicații, fără riscuri.</div>
                                 </div>
                                 <div class="self-stretch justify-start items-center gap-4 inline-flex">
                                     <div class="w-6 h-6 relative  overflow-hidden"><img src="/src/assets/images/icons/sparkling-fill.png" alt="stars icon"></div>
-                                    <div class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Ori obții rezultate, ori îți primești banii înapoi.</div>
+                                    <div class="grow shrink basis-0 text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">Ori obții rezultate, ori îți primești banii înapoi.</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="self-stretch text-center text-red-650 text-xl font-bold font-serif">Singurul risc este să pierzi această ofertă limitată.</div>
+                        <div class="self-stretch text-center text-red-650 text-xl font-bold font-serif lg:text-2xl md:max-lg:text-2xl">Singurul risc este să pierzi această ofertă limitată.</div>
                     </div>
                 </div>
-                <div class="self-stretch rounded-2xl justify-center items-center inline-flex overflow-hidden">
+                <div class="self-stretch rounded-2xl justify-center items-center inline-flex overflow-hidden lg:hidden">
                     <img class="origin-top-left w-full" src="/src/assets/images/placeholder-img5-368x190.png" />
                 </div>
+                <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 hidden lg:flex">
+                    <div class="self-stretch flex-col justify-center items-start gap-1 flex">
+                        <div class="self-stretch text-center text-grays-800 text-lg line-through font-normal ">Total: 245€</div>
+                        <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">45€</span></div>
+                    </div>
+                    <div class="self-stretch flex-col justify-start items-center flex">
+                        <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                            <a href="https://sipunct.com/" class="py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                        </div>
+                        <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                    </div>
+                </div>
             </div>
-            <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 flex">
+            <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 flex lg:hidden">
                 <div class="self-stretch flex-col justify-center items-start gap-1 flex">
-                    <div class="self-stretch text-center text-grays-1000 text-lg font-normal ">Total: 245€</div>
+                    <div class="self-stretch text-center text-grays-800 text-lg line-through font-normal ">Total: 245€</div>
                     <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">45€</span></div>
                 </div>
                 <div class="self-stretch flex-col justify-start items-center flex">
@@ -43,6 +55,9 @@
                     </div>
                     <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
                 </div>
+            </div>
+            <div class="self-stretch rounded-2xl justify-center items-center hidden lg:inline-flex overflow-hidden lg:basis-1/2">
+                <img class="origin-top-left w-full" src="/src/assets/images/[1x1]-redBG-nTv1-site&socials@1.5x.png" />
             </div>
         </div>
     </div>
