added bonus img

--- a/src/sections/L1sec8-mainCTA.html
+++ b/src/sections/L1sec8-mainCTA.html
@@ -242,7 +242,7 @@
             </div>
             <div class="self-stretch flex-col justify-start items-start gap-8 flex">
                 <div class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif">Și...</div>
-                <div class="px-4 pt-6 pb-4 bg-gradient-to-b from-[#f1fff4] to-[#c3f3ce] rounded-2xl border-4 border-[#10f010] flex-col justify-start items-start gap-6 flex overflow-hidden lg:flex-row lg:px-10 lg:pt-10 lg:pb-10 lg:items-center md:max-lg:justify-center md:max-lg:items-center lg:gap-10">
+                <div class="px-4 pt-6 pb-4 bg-grays-50 rounded-2xl border-4 border-[#10f010] flex-col justify-start items-start gap-6 flex overflow-hidden lg:flex-row lg:px-10 lg:pt-10 lg:pb-10 lg:items-center md:max-lg:justify-center md:max-lg:items-center lg:gap-10">
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:basis-1/2 lg:justify-center">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <h5 class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">BONUS #2</h5>
@@ -252,7 +252,7 @@
                         <div class="self-stretch text-center text-grays-1000 text-xl font-normal ">Un apel de descoperire bine pregătit îți poate aduce clienți pe termen lung. Acest ghid îți arată exact ce trebuie să spui și cum să structurezi apelurile pentru a obține colaborări sigure și profitabile.</div>
                     </div>
                     <div class=" w-full rounded-2xl justify-center items-center inline-flex overflow-hidden lg:basis-auto lg:items-center lg:w-1/2">
-                        <img class="origin-top-left w-full " src="/src/assets/images/placeholder-img-368x368.png" />
+                        <img class="origin-top-left w-full " src="/src/assets/images/products/BonusFreeGuide.png" />
                     </div>
                 </div>
                 <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 flex">
