--- a/src/sections/L1sec10-signup.html
+++ b/src/sections/L1sec10-signup.html
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="self-stretch rounded-2xl justify-center items-center inline-flex overflow-hidden lg:basis-1/2">
-            <img class="origin-top-left w-full" src="/src/assets/images/products/[6x5]-product-7.png" />
+            <img class="origin-top-left w-full" src="/src/assets/images/products/BonusFreeGuide.png" />
         </div>
     </div>
 </div>
