added a few pages

--- a/src/sections/L1sec9-guarantee.html
+++ b/src/sections/L1sec9-guarantee.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="self-stretch rounded-2xl justify-center items-center hidden lg:inline-flex overflow-hidden lg:basis-1/2">
-                <img class="origin-top-left w-full" src="/src/assets/images/[1x1]-redBG-nTv1-site&socials@1.5x.png" />
+                <img class="origin-top-left w-full" src="/src/assets/images/[1x1]-redBG-Guarantee.png" />
             </div>
         </div>
     </div>
