--- a/src/sections/footer.html
+++ b/src/sections/footer.html
@@ -1,29 +1,29 @@
 <div class="px-4 justify-start items-center gap-2 inline-flex w-full md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px] xl:flex">
     <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-8 inline-flex">
         <div class="self-stretch flex-col justify-start items-center gap-12 flex">
-            <div class="h-16 w-48 self-center flex-col justify-start items-center gap-6 flex overflow-hidden"><a href="#"><img class="w-full h-auto" src="/src/assets/images/&PUNCT-LOGO-RightType.png" alt="Si Punct Media Logo" ></a></div>
+            <div class="h-16 w-48 self-center flex-col justify-start items-center gap-6 flex overflow-hidden"><a href="/index.html"><img class="w-full h-auto" src="/src/assets/images/&PUNCT-LOGO-RightType.png" alt="Si Punct Media Logo" ></a></div>
             <div class="self-stretch flex-col justify-start items-center gap-6 flex">
-                <a href="#" class="self-stretch text-center text-black text-lg font-normal ">Home</a>
-                <a href="" class="self-stretch text-center text-black text-lg font-normal ">Despre noi</a>
-                <a href="" class="self-stretch text-center text-black text-lg font-normal ">Contactează-ne</a>
-                <a href="" class="self-stretch text-center text-black text-lg font-normal ">SMM Kit</a>
+                <a href="/index.html" class="self-stretch text-center text-black text-lg font-normal ">Home</a>
+                <a href="/in/ghid-gratuit/" class="self-stretch text-center text-black text-lg font-normal ">Ghid Gratuit!</a>
+                <!-- <a href="" class="self-stretch text-center text-black text-lg font-normal ">Despre noi</a> -->
+                <!--<a href="" class="self-stretch text-center text-black text-lg font-normal ">Contactează-ne</a> -->
+                <a href="https://shop.sipunct.com/b/toolkit-start-rapid-in-social-media" class="self-stretch text-center text-black text-lg font-normal ">SMM Kit</a>
             </div>
             <div class="self-stretch justify-center items-start gap-3 inline-flex">
-                <div class="w-6 h-6 relative  overflow-hidden"><a href=""><img src="/src/assets/images/icons/Facebook.svg" alt="stars icon"></a></div>
-                <div class="w-6 h-6 relative  overflow-hidden"><a href=""></a><img src="/src/assets/images/icons/Instagram.svg" alt="stars icon"></a></div>
-                <div class="w-6 h-6 relative  overflow-hidden"><a href=""></a><img src="/src/assets/images/icons/X.svg" alt="stars icon"></a></div>
-                <div class="w-6 h-6 relative  overflow-hidden"><a href=""></a><img src="/src/assets/images/icons/LinkedIn.svg" alt="stars icon"></a></div>
+                <!-- <div class="w-6 h-6 relative  overflow-hidden"><a href=""><img src="/src/assets/images/icons/Facebook.svg" alt="stars icon"></a></div> -->
+                <div class="w-6 h-6 relative  overflow-hidden"><a href="https://www.instagram.com/sipunctmedia/"></a><img src="/src/assets/images/icons/Instagram.svg" alt="stars icon"></a></div>
+                <!-- <div class="w-6 h-6 relative  overflow-hidden"><a href=""></a><img src="/src/assets/images/icons/X.svg" alt="stars icon"></a></div> -->
+                <!-- <div class="w-6 h-6 relative  overflow-hidden"><a href=""></a><img src="/src/assets/images/icons/LinkedIn.svg" alt="stars icon"></a></div> -->
             </div>
         </div>
         <div class="self-stretch pb-4 flex-col justify-start items-center gap-6 flex">
             <div class="self-stretch h-px bg-black border border-black"></div>
             <div class="flex-col justify-start items-center gap-8 flex">
                 <div class="flex-col justify-start items-center gap-4 flex">
-                    <a href="" class="text-black text-base font-medium  underline">Privacy Policy</a>
-                    <a href="" class="text-black text-base font-medium  underline">Terms of Service</a>
-                    <a href="" class="text-black text-base font-medium  underline">Cookies Settings</a>
+                    <a href="/in/privacy-policy/" class="text-black text-base font-medium underline">Politica de Confidențialitate</a>
+                    <a href="/in/terms-&-conditions/" class="text-black text-base font-medium  underline">Termeni și Condiții</a>
                 </div>
-                <div class="text-black text-sm font-medium ">© 2025 Si Punct Media. All rights reserved.</div>
+                <div class="text-black text-sm font-medium ">© 2025 Si Punct Media. Toate drepturile rezervate.</div>
             </div>
         </div>
     </div>
