--- a/src/sections/navigation.html
+++ b/src/sections/navigation.html
@@ -1,8 +1,15 @@
 <div class="h-20 px-4 py-3.5  justify-between items-center flex flex-row md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px]">
     <div class="w-32 h-10 flex-col justify-center items-center inline-flex">
-        <img src="/src/assets/images/&PUNCT-LOGO-RightType.png" alt="Si Punct Media Logo" >
+        <a href="/index.html">
+            <img src="/src/assets/images/&PUNCT-LOGO-RightType.png" alt="Si Punct Media Logo" >
+        </a>
+    </div>
+    <div class="hidden lg:inline-flex gap-6">
+        <a href="https://shop.sipunct.com/b/toolkit-start-rapid-in-social-media" class="self-stretch text-center text-grays-900 text-lg font-normal hover:underline">SMM Kit</a>
+        <!-- <a href="https://shop.sipunct.com/b/toolkit-start-rapid-in-social-media" class="self-stretch text-center text-grays-900 text-lg font-normal hover:underline">Despre</a> -->
+        <a href="/in/ghid-gratuit/" class="self-stretch text-center text-grays-900 text-lg font-normal hover:underline">Ghid Gratuit</a>
     </div>
     <div class="rounded-lg border-2 border-grays-700 justify-center items-center gap-2 flex hover:border-red-650 hover:bg-grays-0">
-        <a class="px-5 py-2 text-center text-grays-800 text-lg font-semibold" href="https://www.instagram.com/bustiuc.s/">Contactează-mă</a>
+        <a class="px-5 py-2 text-center text-grays-800 text-lg font-semibold" href="https://www.instagram.com/sipunctmedia/">Contactează-ne</a>
     </div>
 </div>
