updated all CTAs to go directly to checkout

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="/src/mailerlite.js" defer></script>
         <script src="/src/sections/timer.js" defer></script>
         <script src="https://cdn.lottielab.com/s/lottie-player@1.x/player-web.min.js"></script>
+        <script type="text/javascript" src="https://payhip.com/payhip.js"></script>
     </head>
     <body class="flex flex-col bg-grays-75">
         <header class="flex flex-col">
