--- a/src/sections/L1sec6-bonuses.html
+++ b/src/sections/L1sec6-bonuses.html
@@ -46,7 +46,7 @@
                     <p class="self-stretch text-grays-1000 text-sm font-normal lg:hidden">Nu îți face griji, chiar dacă nu reușești să prinzi acestă ofertă gratis, când procuri acest kit, poți opta pentru design propriu contra cost, sau dacă ne place proiectul tău, îți oferim un design personalizat gratis!</p>
                     <div class="self-stretch flex-col justify-start items-center flex">
                         <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
-                            <a href="https://sipunct.com/" class="py-2 px-[10%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                            <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[10%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
                         </div>
                         <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
                     </div>
@@ -78,7 +78,7 @@
                 <p class="self-stretch text-grays-1000 text-sm font-normal ">Nu îți face griji, chiar dacă nu reușești să prinzi acestă ofertă gratis, când procuri acest kit, poți opta pentru design propriu contra cost, sau dacă ne place proiectul tău, îți oferim un design personalizat gratis!</p>
                 <div class="self-stretch flex-col justify-start items-center flex">
                     <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
-                        <a href="https://sipunct.com/" class="py-2 px-[10%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                        <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[10%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
                     </div>
                     <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
                 </div>
@@ -104,7 +104,7 @@
             </div>
             <div class="self-stretch flex-col justify-start items-center flex">
                 <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650 lg:w-1/2">
-                    <a href="https://sipunct.com/" class="py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                    <a href="https://payhip.com/b/xm4Pr" data-theme="none" data-product="xm4Pr" class="payhip-buy-button py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
                 </div>
                 <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
             </div>
