updated homepage links to not include html ending

--- a/src/sections/footer.html
+++ b/src/sections/footer.html
@@ -1,9 +1,9 @@
 <div class="px-4 justify-start items-center gap-2 inline-flex w-full md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px] xl:flex">
     <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-8 inline-flex">
         <div class="self-stretch flex-col justify-start items-center gap-12 flex">
-            <div class="h-16 w-48 self-center flex-col justify-start items-center gap-6 flex overflow-hidden"><a href="/index.html"><img class="w-full h-auto" src="/src/assets/images/&PUNCT-LOGO-RightType.png" alt="Si Punct Media Logo" ></a></div>
+            <div class="h-16 w-48 self-center flex-col justify-start items-center gap-6 flex overflow-hidden"><a href="/"><img class="w-full h-auto" src="/src/assets/images/&PUNCT-LOGO-RightType.png" alt="Si Punct Media Logo" ></a></div>
             <div class="self-stretch flex-col justify-start items-center gap-6 flex">
-                <a href="/index.html" class="self-stretch text-center text-black text-lg font-normal ">Home</a>
+                <a href="/" class="self-stretch text-center text-black text-lg font-normal ">Home</a>
                 <a href="/in/ghid-gratuit/" class="self-stretch text-center text-black text-lg font-normal ">Ghid Gratuit!</a>
                 <!-- <a href="" class="self-stretch text-center text-black text-lg font-normal ">Despre noi</a> -->
                 <!--<a href="" class="self-stretch text-center text-black text-lg font-normal ">Contactează-ne</a> -->
