--- a/src/sections/navigation.html
+++ b/src/sections/navigation.html
@@ -1,6 +1,6 @@
 <div class="h-20 px-4 py-3.5  justify-between items-center flex flex-row md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px]">
     <div class="w-32 h-10 flex-col justify-center items-center inline-flex">
-        <a href="/index.html">
+        <a href="/">
             <img src="/src/assets/images/&PUNCT-LOGO-RightType.png" alt="Si Punct Media Logo" >
         </a>
     </div>
