--- a/src/sections/L1sec9-guarantee.html
+++ b/src/sections/L1sec9-guarantee.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="self-stretch rounded-2xl justify-center items-center inline-flex overflow-hidden lg:hidden">
-                    <img class="origin-top-left w-full" src="/src/assets/images/placeholder-img5-368x190.png" />
+                    <img class="origin-top-left w-full" src="/src/assets/images/[1x1]-redBG-Guarantee.png" />
                 </div>
                 <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 hidden lg:flex">
                     <div class="self-stretch flex-col justify-center items-start gap-1 flex">
