updated profile pic

--- a/src/sections/L1sec7-about.html
+++ b/src/sections/L1sec7-about.html
@@ -12,8 +12,8 @@
                             <div class="self-stretch text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">Sunt Graphic Designer cu peste 3 ani de experiență în marketing digital. Am lucrat cu clienți din întreaga lume – SUA, Marea Britanie, Germania, Portugalia, Bulgaria, Emiratele Arabe Unite, Rusia – și am acumulat o experiență variată în multiple aspecte ale marketingului digital. De la crearea de designuri pentru site-uri și aplicații, la dezvoltarea strategiilor de social media, crearea de conținut, branding vizual și optimizarea campaniilor de marketing, am explorat fiecare colț al acestei industrii dinamice.</div>
                             <div class="self-stretch text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">Am început de la zero, fără cursuri, maratoane sau bootcamp-uri. Am învățat prin practică, descoperind singur ce funcționează și ce nu, ce aduce rezultate și ce este doar zgomot.</div>
                         </div>
-                        <div class="self-stretch rounded-2xl justify-center items-center hidden overflow-hidden lg:inline-flex lg:justify-center">
-                            <img class="" src="/src/assets/images/placeholder-img-profilepic-368x368.png" />
+                        <div class="self-stretch rounded-2xl justify-center items-center hidden overflow-hidden lg:inline-flex w-1/4">
+                            <img class="" src="/src/assets/images/profilePicSite.png" />
                         </div>
                     </div>
                     <div class="self-stretch text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">La început, credeam că a fi graphic designer înseamnă doar să fii creativ. Greșit. Dacă vrei să fii freelancer și să ai control asupra carierei tale, trebuie să înțelegi cum să atragi clienți, să-i convingi să lucreze cu tine și să livrezi rezultate care să îi facă să revină.</div>
@@ -37,7 +37,7 @@
                     <div class="self-stretch text-center text-red-650 text-xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">Acum este rândul tău să faci primul pas către succes.</div>
                 </div>
                 <div class="self-stretch rounded-2xl justify-center items-center inline-flex overflow-hidden lg:hidden">
-                    <img class="" src="/src/assets/images/placeholder-img-profilepic-368x368.png" />
+                    <img class="" src="/src/assets/images/profilePicSite.png" />
                 </div>
             </div>  
         </div>
