--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
         <script src="/src/sections/timer.js" defer></script>
         <script src="https://cdn.lottielab.com/s/lottie-player@1.x/player-web.min.js"></script>
         <script type="text/javascript" src="https://payhip.com/payhip.js"></script>
+        <!-- MailerLite Universal -->
+        <script>
+            (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
+            .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
+            n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
+            (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
+            ml('account', '1310572');
+        </script>
+        <!-- End MailerLite Universal -->
     </head>
     <body class="flex flex-col bg-grays-75">
         <header class="flex flex-col">
