upated success modal text

--- a/src/sections/L1sec10-signup.html
+++ b/src/sections/L1sec10-signup.html
@@ -40,10 +40,10 @@
                             <!-- Modal Body -->
                             <div class="p-4 md:p-5 space-y-4">
                                 <p class="text-base leading-relaxed text-gray-500">
-                                    Verifică-ți emailul pentru a descărca ghidul gratuit! 📧
+                                    Verifică-ți emailul în câteva minute pentru a descărca ghidul gratuit! 📧
                                 </p>
                                 <p class="text-base leading-relaxed text-gray-500">
-                                    Nu uita să verifici și folderul de Spam dacă nu găsești emailul în Inbox.
+                                    Nu uita să verifici și folderul de Spam, Promoții, Rețele Sociale dacă nu găsești emailul în Inbox.
                                 </p>
                             </div>
                             <!-- Modal Footer -->
